# mlsolidpy

./: .gitignore  README.md  pyproject.toml  requirements.txt
mlsolidpy/: exceptions.py  mlsolid.py  types.py
tests/: load_and_upload_artifact.py
tests/data/: plain_text_file.txt
